# redink

./: README.md  db.sqlite3  manage.py  pyproject.toml
PrintFac/: apps.py  forms.py  models.py  views.py
PrintFac/migrations/: 0001_initial.py  0002_alter_document_email.py  0002_alter_document_options_remove_document_uploaded_at.py  0003_document_amount.py  0004_document_name.py
redink/: asgi.py  settings.py  urls.py  wsgi.py
templates/: Razopay.html  UploadFile.html  base.html  success.html
