[tool.poetry]
name = "prinify"
version = "0.1.0"
description = ""
authors = ["shivansh <shivanshkate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
pypdf2 = "^3.0.1"
page-counter = "^1.0.1"
pycryptodome = "^3.17"
razorpay = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
